--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev": "cross-env NODE_ENV=development node build/dev-server.js",
     "build": "node build/build.js"
   },
   "dependencies": {
