--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "cross-env NODE_ENV=production node build/build.js"
   },
   "dependencies": {
     "vue": "^2.2.6",
@@ -23,6 +23,7 @@
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
